# pyxbe

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml  tests.yml
docs/: api.rst  conf.py  guide.rst  index.rst
tests/: test_load.py
xbe/: __init__.py  __main__.py
