[metadata]
name = pyxbe
version = 1.0.1
description = Library to work with XBE files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mborgerson/pyxbe
author = Matt Borgerson
author_email = contact@mborgerson.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.package_data]
xbe =
    py.typed
