[metadata]
name = pyxbe
version = attr: xbe.__version__
description = Library to work with XBE files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mborgerson/pyxbe
author = Matt Borgerson
author_email = contact@mborgerson.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = xbe
python_requires = >=3.8
include_package_data = True

[options.extras_require]
docs =
    furo
    ipython
    myst-parser
    sphinx
    sphinx-autodoc-typehints

[options.package_data]
xbe =
    py.typed
